<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/agnb_bk4"
    android:padding="10dp"
    tools:context=".MainActivity">
    <!--https://stackoverflow.com/questions/15304481/setting-background-for-a-fragment
        Read the start of Usama Sarwar's question (on Stackoverflow) of changing the background of a fragment.
        Then I added android:background to this file and teh drawable showed up as an option.
        Works perfectly fine.
     -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:text="All Gas No Brakes"
        android:textColor="@color/white"

        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/username_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_edittext_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edittext_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_edittext_layout"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edittext_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/purple"

        android:text="@string/register_button_text"
        android:textStyle="bold" />

</RelativeLayout>