<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/agnb_bk4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_message_textview"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/welcome_message_text"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/username_text"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <Button
        android:id="@+id/roll_out_button"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:backgroundTint="?attr/colorPrimary"
        android:ems="10"
        android:text="@string/roll_out_message_text"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"


        />

</LinearLayout>
