<resources>
    <string name="app_name">AllGasNoBrakes</string>
    <string name="player_score">Score</string>
    <string name="total_codes">Total</string>
    <string name="sort_text">Sort</string>
    <string name="home_text">Home</string>
    <string name="profile_text">Profile</string>
    <string name="camera_text">Camera</string>
    <string name="leaderboard_text">Leaderboard</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_button_text">Register</string>
    <string name="welcome_message_text">WELCOME BACK</string>
    <string name="roll_out_message_text">ROLL OUT</string>
    <string name="highest_score_text">Highest Score</string>
    <string name="lowest_score_text">Lowest Score</string>
    <string name="not_on_collector_message">Not on The Hardcore Collectors yet</string>
    <string name="not_on_unique_highest_message">Not on The One and Only yet</string>

    <!--These are all for the profile pages-->
    <string name="username_string">Username</string>
    <string name="player_name">Player\'s Name</string>
    <string name="player_email">Player\'s Email</string>
    <string name="edit_button">Edit</string>
    <string name="contact_info_header">Player Information</string>
    <string name="player_search_hint">Player Search</string>
    <string name="password_header">New Password</string>
    <string name="email_header">New Email</string>
    <string name="username_prompt">Username</string>
    <string name="username_header">Change Username</string>
    <string name="name_prompt">Name</string>
    <string name="player_name_prompt">Change Name</string>
    <string name="edit_profile_header">Editing User Profile</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <string name="search_text">Search</string>
    <string name="save_changes_txt">Save</string>
    <string name="cancel_changes_txt">Cancel</string>
    <string name="username_holder">Username</string>
    <string name="location_label">LOCATION</string>
    <string name="comment_hint">Comment</string>
    <string name="confirm_btn_text">Confirm</string>

    <!--For taking a photo-->
    <string name="photo_text_btn">Photo Button</string>
    <string name="taking_photo_txt">Take Photo</string>
    <string name="image_description">picture taken by user\'s camera</string>
    <string name="photo_prompt_text">Please click the button above to photograph the area where the QR code was found.</string>


</resources>
