<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">



    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:autoFocusButtonColor="@color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@color/white"
        app:flashButtonVisible="true"
        app:layout_constraintTop_toTopOf="parent"
        app:maskColor="#6C000000" />

    <TextView
        android:id="@+id/tv_textView"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_below="@+id/scanner_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanner_view" />

</androidx.constraintlayout.widget.ConstraintLayout>