...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/sort_order"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/purple"
        android:text="@string/sort_text"
        app:layout_constraintBottom_toTopOf="@+id/player_score"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
...
